updated medium link copy

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -253,7 +253,7 @@
                 <br><br>
                 <a href="http://nowherelimited.com/paul-humphrey-inversions.html" alt="Inversions review" target="_blank">A nice review of one of my films.</a>
                 <br><br>
-                <a href="https://medium.com/@pablo727272/codecraft-school-in-boulder-co-week-8-hackathon-376a9f89e7d7" alt="Hackleberry Finn hackathon" target="_blank">Blog post I published about my Hackleberry Finn hackathon project, August 2017.</a></p>
+                <a href="https://medium.com/@pablo727272/codecraft-school-in-boulder-co-week-8-hackathon-376a9f89e7d7" alt="Hackleberry Finn hackathon" target="_blank">Blog post about my Hackleberry Finn hackathon project, August 2017.</a></p>
             </div>
         <!-- close interests container -->
         </div>
