--- a/public/html/index.html
+++ b/public/html/index.html
@@ -237,7 +237,7 @@
                 <h2>Interests:</h2>
             </div>
             <div class="row">
-                <p>I am interested in how things work, the sublime, nature, hiking, camping, ecology, aesthetics, music, art, architecture, film, and design.
+                <p>I am interested in computers and technology, how things work, the sublime, nature, hiking, camping, ecology, aesthetics, music, art, architecture, film, and design.
                 <br><br>
                 Books: Shakespeare, Cormac McCarthy, The Beat Generation, Walt Whitman, Henry David Thoreau, William Gibson, Philip K. Dick, William Faulkner, John Steinbeck, F. Scott Fitzgerald, Edward Abbey, Roman History (especially Suetonius).
                 <br><br>
@@ -247,7 +247,7 @@
                 <br><br>
                 Music: The Black Angels, Oblivians, Crime &amp; The City Solution, Nick Drake, Bert Jansch, Ryley Walker, Nick Cave, Joy Division, Richard Hawley, The Stooges, everything 60's Garage, The Fall, Galaxie 500, The Smiths, Cocteau Twins, The Cure, The Velvet Underground, Royal Trux, Ex-Cult, Blind Willie Johnson, Robert Johnson, Hank Williams, Patsy Cline, anything with soul...
                 <br><br>
-                Tech: Web, Virtual Reality, Augmented Reality, Neural Networks, Autonomous Cars, AI.
+                Tech: Web, JavaScript, Algorithms, Virtual Reality, Augmented Reality, Neural Networks, Autonomous Cars, AI.
                 <br><br>
                 Meetups: <a href="https://www.meetup.com/Boulder-JS/" alt="Boulder JS" target="_blank">Boulder JS</a>, <a href="https://www.meetup.com/Colorado-VR/" alt="COVR" target="_blank">Colorado Virtual Reality - COVR</a>, <a href="https://www.meetup.com/DenverScript/" alt="DenverScript" target="_blank">DenverScript</a>, <a href="https://www.meetup.com/bdnewtech/" alt="New Tech" target="_blank">New Tech Colorado</a>, <a href="https://www.meetup.com/DevFaction-Boulder/" alt="DevFaction-Boulder" target="_blank">DevFaction-Boulder</a>
                 <br><br>
