full stack instead of front-end

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,7 +72,7 @@
                 <h1>Paul Humphrey</h1>
             </div>
             <div class="row prh-grey-row text-center">
-                <h2>Front-end Web Developer</h2>
+                <h2>Full Stack Web Developer</h2>
             </div>
             <div class="row prh-contact" id="contact">
                 <div class="col-sm-2">
