--- a/public/html/index.html
+++ b/public/html/index.html
@@ -241,7 +241,7 @@
                 <br><br>
                 Books: Shakespeare, Cormac McCarthy, The Beat Generation, Walt Whitman, Henry David Thoreau, William Gibson, Philip K. Dick, William Faulkner, John Steinbeck, F. Scott Fitzgerald, Edward Abbey, Roman History (especially Suetonius).
                 <br><br>
-                People: Nikola Tesla, Albert Einstein, Stephen Hawking, John Muir, Louise Brooks, Vincent Van Gogh, Stanley Kubrick, Orson Welles, Stan Brakhage.
+                People: Nikola Tesla, Albert Einstein, Stephen Hawking, John Muir, Louise Brooks, Vincent Van Gogh, Stanley Kubrick, Orson Welles, Stan Brakhage, Walt Whitman.
                 <br><br>
                 Movies: <i>Citizen Kane</i>, <i>2001: A Space Odyssey</i>, <i>Sunrise: A Song Of Two Humans</i>, <i>The New World</i>, <i>Melancholia</i>, <i>The Cabinet Of Dr. Caligari</i>, <i>Metropolis</i>, <i>Young Frankenstein</i>, <i>Vertigo</i>.
                 <br><br>
